package eapli.ecourse.sharedBoardManagement.domain;

public enum UserPermission {
    READ,
    WRITE
}
